--- a/DMSDriver/DMSDriver/App/Views/ReasonSkipView/ReasonSkipView.xib
+++ b/DMSDriver/DMSDriver/App/Views/ReasonSkipView/ReasonSkipView.xib
@@ -48,8 +48,8 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bko-MR-eUC">
                     <rect key="frame" x="24" y="80" width="327" height="496"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Why do you want to skip?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1eb-Ax-1gc">
-                            <rect key="frame" x="35.5" y="20" width="256" height="26"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Why do you want to skip?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1eb-Ax-1gc">
+                            <rect key="frame" x="15" y="20" width="297" height="26"/>
                             <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="22"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
@@ -129,6 +129,7 @@
                         <constraint firstItem="Otk-7j-Q64" firstAttribute="width" secondItem="bko-MR-eUC" secondAttribute="width" multiplier="1:2" id="ZJW-xZ-7Mk"/>
                         <constraint firstItem="1Ci-Nx-E2H" firstAttribute="top" secondItem="tbc-eE-uCE" secondAttribute="bottom" constant="10" id="Zbd-uC-Q9i"/>
                         <constraint firstItem="Otk-7j-Q64" firstAttribute="centerX" secondItem="bko-MR-eUC" secondAttribute="centerX" id="cYK-oB-xgl"/>
+                        <constraint firstItem="1eb-Ax-1gc" firstAttribute="leading" secondItem="bko-MR-eUC" secondAttribute="leading" constant="15" id="gQe-b4-ROX"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
